Added some dummy html

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,28 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<style>
+body {
+    background-color:#efefef;
+    width:600px;
+    color:#393854;
+    margin:auto;
+}
+
+.box {
+    background-color: #fff;
+-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.17);
+-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.17);
+box-shadow: 0 1px 2px rgba(0,0,0,0.17);
+padding: 10px 20px;
+margin: 10px;
+margin-bottom: 20px;
+height: 100px !important;
+font-size: 22px;
+font-weight: 600;
+
+}
+
+
+</style>
+
+<div class="box">
+test
+</div>
